--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -2,7 +2,7 @@
 </div>
 <div class="footer-padding"></div>
   <div class="footer">
-    <p>Made with ❤️ by The App Brewery</p>
+    <p>© <a href = "https://github.com/khandelwalarvind26" class="link">github.com/khandelwalarvind26</a></p>
   </div>
 </div>
 </body>
