--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,12 +1,12 @@
 <%- include("partials/header") -%>
 <h1>Home</h1>
-<p><%=homeStartingContent%></p><br>
+<p><%=homeStartingContent%></p><br><hr>
 
-<%console.log(posts)%>
 
-<% for(let i = 0; i < posts.length; i++) { %>
-    <h3><%=posts[i].title%></h3>
-    <p><%=posts[i].article%></p>
-<% } %>
+
+<% posts.forEach(function(post) { %>
+    <h2><%=post.title%></h2>
+    <p><%=post.article%></p><hr>
+<% }); %>
 
 <%- include("partials/footer") -%>
